--- a/city-register/pom.xml
+++ b/city-register/pom.xml
@@ -8,6 +8,17 @@
     <artifactId>city-register</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+    <!-- https://mvnrepository.com/artifact/junit/junit -->
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13.1</version>
+        <scope>test</scope>
+    </dependency>
+
+    </dependencies>
+
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
         <maven.compiler.target>23</maven.compiler.target>
