--- a/city-register/pom.xml
+++ b/city-register/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
 
-    
+
     <dependencies>
     <!-- https://mvnrepository.com/artifact/junit/junit -->
     <dependency>
@@ -18,6 +18,13 @@
         <version>4.13.1</version>
         <scope>test</scope>
     </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.17</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
