--- a/register-office/pom.xml
+++ b/register-office/pom.xml
@@ -8,9 +8,6 @@
     <artifactId>register-office</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
-
-
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -18,6 +15,21 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.6.13.Final</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.5</version>
+        </dependency>
+
+
     </dependencies>
 
     <properties>
