--- a/register-office/pom.xml
+++ b/register-office/pom.xml
@@ -44,6 +44,19 @@
             <version>${slf4j.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
 
 <!--        <dependency>-->
 <!--            <groupId>org.slf4j</groupId>-->
@@ -81,6 +94,7 @@
         <maven.compiler.target>23</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.version>2.0.17</slf4j.version>
+        <spring.version>7.0.0-M4</spring.version>
     </properties>
 
 </project>
