--- a/register-office/pom.xml
+++ b/register-office/pom.xml
@@ -62,6 +62,11 @@
             <artifactId>spring-orm</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>4.0.0-M2</version>
+        </dependency>
 
 
 <!--        <dependency>-->
