--- a/register-office/pom.xml
+++ b/register-office/pom.xml
@@ -65,7 +65,7 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
-            <version>4.0.0-M2</version>
+            <version>3.5.0</version>
         </dependency>
 
 
@@ -105,7 +105,7 @@
         <maven.compiler.target>23</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.version>2.0.17</slf4j.version>
-        <spring.version>7.0.0-M4</spring.version>
+        <spring.version>6.2.7</spring.version>
     </properties>
 
 </project>
